Change for testing in notice

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                 <div class="col-gl-12">
                     <div class="section_title">
                         <h3>Notice</h3>
+                        <h4>This is done by Maruf</h4>
                     </div>
                 </div>
             </div>
