--- a/index.html
+++ b/index.html
@@ -266,14 +266,15 @@
                 <div class="col-md-7">
                     <div class="link_container">
                         <ul id="links_to_click" class="links_to_click">
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice1.pdf">Collection of Original Certificate</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">Transport schedule for MIU Graduate Students</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">Gown and Gift Distribution</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">Final Announcment </a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">View Exchange with Students</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">Recent Condition of Arrangment</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">Extension of Registration Time</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/notice2.pdf">Registration Open for 2nd Convocation</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/09 29_Aug_Collection of Original Certificate.pdf">Collection of Original Certificate</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/08 28_July_Transport schedule for MIU Graduate Students.pdf">Transport schedule for MIU Graduate Students</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/07 22_July_Gown and Gift Distribution.pdf">Gown and Gift Distribution</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/06 12_july_Final Announcment.pdf">Final Announcment </a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/05 12_July_View Exchange with Students.pdf">View Exchange with Students</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/04 13_June_Convocation Update.pdf">Convocation Update</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/03 7_May_Recent Condition of Arrangment.pdf">Recent Condition of Arrangment</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/02 9_Feb_Extension of Registration Time.pdf">Extension of Registration Time</a></li>
+                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/01 12_January_Registration Open for 2nd Convocation.pdf">Registration Open for 2nd Convocation</a></li>
                         </ul>
                     </div>
                     <div id="pdfModal" class="modal" >
