medal bg image and others

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="row">
                 <div class="col-gl-12">
                     <div class="section_title">
-                        <h3>GOLD MEDALISTS</h3>
+                        <h3>Awardees</h3>
                     </div>
                 </div>
             </div>
@@ -355,13 +355,13 @@
                 <div class="col-md-12">
                     <ul class="gold_medal_controller">
                         <!-- Filtering controls -->
-                        <li data-filter="all"> All items </li>
-                        <li data-filter="Chancellor">Chancellor Goldmedalist</li>
-                        <li data-filter="Vice_Chancellor">Vice Chancellor Goldmedalist</li>
-                        <li data-filter="Chairman">Chairman’s Goldmedalist</li>
-                        <li data-filter="Dean">Dean’s Goldmedalist</li>
+                        <li data-filter="all"> All </li>
+                        <li data-filter="Chancellor">Chancellor's <br>Gold Medalist</li>
+                        <li data-filter="Chairman">Chairman's<br> Gold Medalist</li>
+                        <li data-filter="Vice_Chancellor">Vice Chancellor's <br>Gold Medalist</li>
+                        <li data-filter="Dean">Dean's<br> Gold Medalist</li>
                         <!-- To create a search control -->
-                        <li class="search_bar"><input class="w-100" type="text" name="filtr-search" value="" placeholder="Your search" data-search=""></li>
+                        <li class="search_bar"><input class="w-100" type="text" name="filtr-search" value="" placeholder="Search" data-search=""></li>
                     </ul>
                 </div>
             </div>
@@ -1326,23 +1326,23 @@
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-2">
                         <div class="footer-item">
-                            <h3>Own Campus</h3>
-                            <p>123 Main Street, City, Country</p>
+                            <h3>Permanent Campus</h3>
+                            <p>Plot # CEN-16, Road # 106, Gulshan 2, Dhaka-1212, Bangladesh</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="footer-item">
-                            <h3>Campus Address 2</h3>
-                            <p>456 Park Avenue, City, Country</p>
+                            <h3>Contact at Ashulia</h3>
+                            <p>Ashulia Model Town, Khagan, Ashulia, Dhaka</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-4 col-lg-3">
                         <div class="footer-item">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Courses</a></li>
+                                <li><a href="https://manarat.ac.bd/">MIU Main Site </a></li>
+                                <li><a href="#">Home </a></li>
+                                <li><a href="#">Gallery</a></li>
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
