wow,isotop,easing,counterup,waypoint js added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <link rel="stylesheet" href="VenoBox-master/dist/venobox.min.css" type="text/css" media="screen" />
     <!-- overlay popup css link -->
     <link rel="stylesheet" href="css/overlay.css">
-
-    <!-- bootstrap css link -->
+    <!-- slick slider css link -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- animate css link -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 
     <!-- default css settings  -->
@@ -100,7 +101,7 @@
                     <!-- <div class="special_note">
                         <span class="note_text_1"></span>
                     </div> -->
-                    <div class="banner_content_every">
+                    <div class="banner_content_every ">
                         <h3>Embrace the Wait, Celebrate the Achievement</h3>
                         <h1>2nd <span>CONVOCATION</span> 2023</h1>
                         <div class="place_date">
@@ -229,9 +230,9 @@
             </div> -->
             <div class="row">
                 <div class="col-lg-7">
-                    <a class="venobox video_link" data-autoplay="true" data-maxwidth="600px" data-vbtype="video" href="https://www.youtube.com/watch?v=XYFKQ7uryBw">
-                        <div class="video_container">
-                            <img src="/convocation_manarat/images/MIU.jpeg" alt="">
+                    <a class="venobox video_link " data-autoplay="true" data-maxwidth="600px" data-vbtype="video" href="https://www.youtube.com/watch?v=XYFKQ7uryBw">
+                        <div class="video_container wow animate__animated animate__fadeInBottomLeft">
+                            <img src="images/MIU.jpeg" alt="">
                             <div class="video_overlay">
                                 <div class="play_button">
                                     <i class="fa-solid fa-play"></i>
@@ -241,7 +242,7 @@
                     </a>
                 </div>
                 <div class="col-lg-5">
-                    <div class="video_right_container">
+                    <div class="video_right_container wow animate__animated animate__fadeInBottomRight">
                         <h3>2nd Convocation Promo</h3>
                         <h4>30 July 2023</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ilndlo molestiae consequatur voluptatibus quasi fugiat recusandae veniam, sequi reprehenderit porro ratione at quo quisquam iusto excepturi odio quidem exercitationem. Cupiditate, veritatis.</p>
@@ -257,24 +258,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-gl-12">
-                    <div class="section_title">
+                    <div class="section_title wow animate__animated animate__fadeInUp">
                         <h3>Notice</h3>
                     </div>
                 </div>
             </div>
             <div class="row align-items-center">
                 <div class="col-md-7">
-                    <div class="link_container">
-                        <ul id="links_to_click" class="links_to_click">
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/09 29_Aug_Collection of Original Certificate.pdf">Collection of Original Certificate</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/08 28_July_Transport schedule for MIU Graduate Students.pdf">Transport schedule for MIU Graduate Students</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/07 22_July_Gown and Gift Distribution.pdf">Gown and Gift Distribution</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/06 12_july_Final Announcment.pdf">Final Announcment </a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/05 12_July_View Exchange with Students.pdf">View Exchange with Students</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/04 13_June_Convocation Update.pdf">Convocation Update</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/03 7_May_Recent Condition of Arrangment.pdf">Recent Condition of Arrangment</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/02 9_Feb_Extension of Registration Time.pdf">Extension of Registration Time</a></li>
-                            <li><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/01 12_January_Registration Open for 2nd Convocation.pdf">Registration Open for 2nd Convocation</a></li>
+                    <div class="link_container ">
+                        <ul id="links_to_click" class="links_to_click wow animate__animated animate__fadeInLeft">
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/09 29_Aug_Collection of Original Certificate.pdf">Collection of Original Certificate</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/08 28_July_Transport schedule for MIU Graduate Students.pdf">Transport schedule for MIU Graduate Students</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/07 22_July_Gown and Gift Distribution.pdf">Gown and Gift Distribution</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/06 12_july_Final Announcment.pdf">Final Announcment </a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/05 12_July_View Exchange with Students.pdf">View Exchange with Students</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/04 13_June_Convocation Update.pdf">Convocation Update</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/03 7_May_Recent Condition of Arrangment.pdf">Recent Condition of Arrangment</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/02 9_Feb_Extension of Registration Time.pdf">Extension of Registration Time</a></li>
+                            <li class="wow animate__animated animate__lightSpeedInLeft" data-wow-delay="1000ms"><a href="#" class="open-pdf-link" data-pdf-src="images/Notice/01 12_January_Registration Open for 2nd Convocation.pdf">Registration Open for 2nd Convocation</a></li>
                         </ul>
                     </div>
                     <div id="pdfModal" class="modal" >
@@ -285,7 +286,7 @@
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <div class="big_logo_right">
+                    <div class="big_logo_right wow animate__animated animate__fadeInRight">
                         <div class="big_logo_container">
                             <img src="images/logo_image/conv_logo_no_border.png" alt="">
                         </div>
@@ -1389,7 +1390,9 @@
     <script src="js/jquery.filterizr.min.js"></script>
     <!-- venobox js link -->
     <script src="VenoBox-master/dist/venobox.min.js"></script>
-    
+    <!-- wow js link -->
+    <script src="js/wow.min.js"></script>
+
     <script src="js/script.js"></script>
     
 </body>
